--- a/Tweetbook/Tweetbook.API/Properties/launchSettings.json
+++ b/Tweetbook/Tweetbook.API/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "Tweetbook.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:5001/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
