Add contracts project

--- a/Tweetbook/Tweetbook.API/Tweetbook.API.csproj
+++ b/Tweetbook/Tweetbook.API/Tweetbook.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tweetbook.Application\Tweetbook.Application.csproj" />
+    <ProjectReference Include="..\Tweetbook.Contracts\Tweetbook.Contracts.csproj" />
     <ProjectReference Include="..\Tweetbook.Domain\Tweetbook.Domain.csproj" />
   </ItemGroup>
 
