--- a/Tweetbook/Tweetbook.API/appsettings.json
+++ b/Tweetbook/Tweetbook.API/appsettings.json
@@ -5,7 +5,7 @@
     "UIEndpoint": "v1/swagger.json"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Tweetbook.API-27ABB065-0D2C-4438-8A59-B7E8BAF1B274;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Tweetbook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
